--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "test:watch": "jest --watch"
     },
     "dependencies": {
-        "@prisma/client": "^5.22.0",
+        "@aws-sdk/client-s3": "^3.693.0",
+        "@aws-sdk/s3-request-presigner": "^3.693.0",
+        "@prisma/adapter-mariadb": "^7.3.0",
+        "@prisma/client": "^7.3.0",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -31,11 +34,10 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.16",
+        "prisma": "^7.3.0",
         "socket.io": "^4.8.1",
         "uuid": "^10.0.0",
-        "winston": "^3.16.0",
-        "@aws-sdk/client-s3": "^3.693.0",
-        "@aws-sdk/s3-request-presigner": "^3.693.0"
+        "winston": "^3.16.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
@@ -51,7 +53,6 @@
         "@typescript-eslint/parser": "^8.14.0",
         "eslint": "^9.14.0",
         "jest": "^29.7.0",
-        "prisma": "^5.22.0",
         "ts-jest": "^29.2.5",
         "tsx": "^4.19.2",
         "typescript": "^5.6.3"
