chore: update database and email configuration for production
- Update TiDB Cloud SSL configuration in database adapter
- Configure production email settings (CITSA SMTP)
- Add database connection test scripts
- Add email configuration test script
- Update OTP expiry to 10 minutes (600 seconds)
- Remove development mode email logging
- Add utility scripts for testing and diagnostics

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,41 @@
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=3000
 API_VERSION=v1
 
-# Database Configuration (MySQL)
-DATABASE_URL="mysql://root:password@localhost:3306/citsa_db"
+# Database Configuration (TiDB Cloud - MySQL Compatible)
+# Requires SSL connection (configured in adapter, not URL)
+DATABASE_URL="mysql://3AHaN9TS9RWZmfY.root:2W5iRSd2pB7SX3F7@gateway01.eu-central-1.prod.aws.tidbcloud.com:4000/test"
 
-# JWT Configuration
-JWT_ACCESS_SECRET=your-super-secret-access-key-change-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+# Individual DB pieces (used by Prisma adapter with SSL for TiDB)
+DATABASE_HOST=gateway01.eu-central-1.prod.aws.tidbcloud.com
+DATABASE_PORT=4000
+DATABASE_USER=3AHaN9TS9RWZmfY.root
+DATABASE_PASSWORD=2W5iRSd2pB7SX3F7
+DATABASE_NAME=test
+
+# JWT Configuration (CHANGE THESE IN PRODUCTION!)
+JWT_ACCESS_SECRET=citsa-ucc-2026-access-secret-key-change-this-now
+JWT_REFRESH_SECRET=citsa-ucc-2026-refresh-secret-key-change-this-now
 JWT_ACCESS_EXPIRY=1h
 JWT_REFRESH_EXPIRY=30d
 
 # OTP Configuration
-OTP_EXPIRY_SECONDS=60
+OTP_EXPIRY_SECONDS=600
 OTP_MAX_ATTEMPTS=3
 OTP_RATE_LIMIT_WINDOW_MINUTES=5
 OTP_RATE_LIMIT_MAX_REQUESTS=3
 
-# SMTP Configuration (Email)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM_NAME=CITSA App
-SMTP_FROM_EMAIL=noreply@citsa.edu
+# SMTP Configuration (Email) - CITSA Email
+SMTP_HOST=smtp.citsaucc.org
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=clink@citsaucc.org
+SMTP_PASSWORD=Rr62b13a9
+SMTP_FROM_NAME=CITSA UCC
+SMTP_FROM_EMAIL=clink@citsaucc.org
 
-# AWS S3 Configuration
+# AWS S3 Configuration (Optional - for file uploads)
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_REGION=us-east-1
@@ -35,14 +43,45 @@ AWS_S3_BUCKET=citsa-uploads
 AWS_S3_URL=https://citsa-uploads.s3.amazonaws.com
 
 # University Email Domain
-UNIVERSITY_EMAIL_DOMAIN=university.edu
+UNIVERSITY_EMAIL_DOMAIN=ucc.edu.gh
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Cors
+# Cors (Update with your frontend URL in production)
 CORS_ORIGIN=*
 
 # Logging
-LOG_LEVEL=debug
+LOG_LEVEL=info
+
+server = sdb-58.hosting.stackcp.net, 
+
+Database/Username =4jwmv1j7ip
+
+
+
+
+Add MySQL User
+Username =citsa_ucc_mobile	Database= citsa_ucc_Mobile-35303137feab
+	Password =peSc!WQyquP3
+
+
+
+    Mailbox=clink@citsaucc.org
+    password= Rr62b13a9
+    Mailbox Type= standard
+    (
+
+
+        
+Setting	Value
+Username	clink@citsaucc.org
+Password	Use the email account’s password.
+Incoming Server	imap.citsaucc.org (for POP3 use pop3.citsaucc.org)
+IMAP Port	993 (143 for non-SSL)
+POP3 Port	995 (110 for non-SSL)
+Outgoing Server	smtp.citsaucc.org
+SMTP Port	465 (25 or 587 for non-SSL)
+Authentication is required for IMAP, POP3, and SMTP.
+    )
