fix: add SSL support for TiDB Cloud connection
- Add ?sslaccept=strict parameter to DATABASE_URL for Prisma CLI
- Remove url from datasource block (Prisma 7 requirement)
- Update .env.example with correct SSL configuration
- Database schema successfully pushed to TiDB Cloud

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ API_VERSION=v1
 
 # Database Configuration (TiDB Cloud - MySQL Compatible)
 # Requires SSL connection (configured in adapter, not URL)
-DATABASE_URL="mysql://3AHaN9TS9RWZmfY.root:2W5iRSd2pB7SX3F7@gateway01.eu-central-1.prod.aws.tidbcloud.com:4000/test"
+DATABASE_URL="mysql://3AHaN9TS9RWZmfY.root:2W5iRSd2pB7SX3F7@gateway01.eu-central-1.prod.aws.tidbcloud.com:4000/test?sslaccept=strict"
 
 # Individual DB pieces (used by Prisma adapter with SSL for TiDB)
 DATABASE_HOST=gateway01.eu-central-1.prod.aws.tidbcloud.com
