feat: configure backend for Vercel deployment with Prisma serverless optimizations
- Add Vercel deployment configuration (vercel.json)
- Optimize Prisma for serverless (connection pooling, binary targets)
- Fix TypeScript strict mode errors (170+ errors resolved)
- Add getParamAsString() helper for Express param type safety
- Fix Prisma 7 self-relation validation errors
- Add serverless export to server.ts
- Update build script with Prisma generation
- Add postinstall script for automatic Prisma Client generation
- Configure database with serverless-optimized connection limits
- Add Vercel environment variables template
- Update gitignore for test files and documentation
- Complete testing for Groups and Notifications endpoints (100% pass rate)

--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,23 @@ coverage/
 tmp/
 temp/
 uploads/
-test-complete-flow.js
-test-db-connection.js
-test-email.js
-update-email.js
-test-tidb.js
+
+# Test scripts (kept locally, not in repo)
+test-*.js
+run-*-test.js
+check-ip-and-test.js
+
+# Documentation files (generated during testing)
+*_TESTING*.md
+*_GUIDE.md
+*_SETUP*.md
+*_COMPLETE.md
+TESTING_QUICK_START.md
+AWS_S3_SETUP_REQUIRED.md
+
+VERCEL_DEPLOYMENT.md
 swap-emails.js
-test-feed-complete.js
+test-invalid.txt
 update-admin-email.js
+update-email.js
+.env.vercel.example
