--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "main": "dist/server.js",
     "scripts": {
         "dev": "tsx watch src/server.ts",
-        "build": "tsc",
+        "build": "prisma generate && tsc",
         "start": "node dist/server.js",
+        "postinstall": "prisma generate",
         "db:generate": "prisma generate",
         "db:push": "prisma db push",
         "db:migrate": "prisma migrate dev",
@@ -23,6 +24,7 @@
         "@aws-sdk/s3-request-presigner": "^3.693.0",
         "@prisma/adapter-mariadb": "^7.3.0",
         "@prisma/client": "^7.3.0",
+        "axios": "^1.13.4",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -30,6 +32,7 @@
         "express": "^4.21.1",
         "express-rate-limit": "^7.4.1",
         "express-validator": "^7.2.0",
+        "form-data": "^4.0.5",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
