--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/server.js",
+            "src": "dist/app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/server.js"
+            "dest": "dist/app.js"
         }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+    ]
 }
