--- a/package.json
+++ b/package.json
@@ -24,6 +24,15 @@
         "@aws-sdk/s3-request-presigner": "^3.693.0",
         "@prisma/adapter-mariadb": "^7.3.0",
         "@prisma/client": "^7.3.0",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/compression": "^1.7.5",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/multer": "^1.4.12",
+        "@types/node": "^22.9.0",
+        "@types/nodemailer": "^6.4.17",
+        "@types/uuid": "^10.0.0",
         "axios": "^1.13.4",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
@@ -39,26 +48,17 @@
         "nodemailer": "^6.9.16",
         "prisma": "^7.3.0",
         "socket.io": "^4.8.1",
+        "typescript": "^5.6.3",
         "uuid": "^10.0.0",
         "winston": "^3.16.0"
     },
     "devDependencies": {
-        "@types/bcryptjs": "^2.4.6",
-        "@types/compression": "^1.7.5",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.0",
-        "@types/jsonwebtoken": "^9.0.7",
-        "@types/multer": "^1.4.12",
-        "@types/node": "^22.9.0",
-        "@types/nodemailer": "^6.4.17",
-        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^8.14.0",
         "@typescript-eslint/parser": "^8.14.0",
         "eslint": "^9.14.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.5",
-        "tsx": "^4.19.2",
-        "typescript": "^5.6.3"
+        "tsx": "^4.19.2"
     },
     "engines": {
         "node": ">=18.0.0"
