feat: Add Gmail API OAuth2 email support
- Implement Gmail API client with OAuth2 authentication
- Auto-refresh access tokens using refresh token
- Fallback to SMTP if Gmail API not configured
- Add Gmail env vars to config (CLIENT_ID, CLIENT_SECRET, REFRESH_TOKEN)
- Update server startup to initialize email transports
- Add googleapis package for Gmail API
- Improve .gitignore for deployment docs and test files

Gmail API provides better deliverability and bypasses cloud platform
port blocking issues (465/587). Tokens persist across deployments.

--- a/.env.example
+++ b/.env.example
@@ -26,12 +26,27 @@ OTP_MAX_ATTEMPTS=3
 OTP_RATE_LIMIT_WINDOW_MINUTES=5
 OTP_RATE_LIMIT_MAX_REQUESTS=3
 
-# SMTP Configuration (Email) - CITSA Email
+# ============================================================
+# Email Configuration (Choose ONE method)
+# ============================================================
+
+# OPTION 1: Gmail API (RECOMMENDED - Uses OAuth2, no port blocking)
+# Get credentials from: https://console.cloud.google.com
+# Generate refresh token: node generate-gmail-token.js
+# See GMAIL_API_SETUP.md for detailed instructions
+GMAIL_CLIENT_ID=your-google-client-id
+GMAIL_CLIENT_SECRET=your-google-client-secret
+GMAIL_REFRESH_TOKEN=your-refresh-token
+GMAIL_FROM_EMAIL=your-gmail@gmail.com
+GMAIL_FROM_NAME=CITSA UCC
+
+# OPTION 2: SMTP (Fallback - May be blocked on cloud platforms)
+# Use port 587 (STARTTLS) for cloud hosting, port 465 for local
 SMTP_HOST=smtp.citsaucc.org
-SMTP_PORT=465
-SMTP_SECURE=true
+SMTP_PORT=587
+SMTP_SECURE=false
 SMTP_USER=clink@citsaucc.org
-SMTP_PASSWORD=Rr62b13a9
+SMTP_PASSWORD=your-password
 SMTP_FROM_NAME=CITSA UCC
 SMTP_FROM_EMAIL=clink@citsaucc.org
 
