--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
         "express-rate-limit": "^7.4.1",
         "express-validator": "^7.2.0",
         "form-data": "^4.0.5",
+        "googleapis": "^171.4.0",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.16",
+        "nodemailer": "^6.10.1",
         "prisma": "^7.3.0",
         "socket.io": "^4.8.1",
         "typescript": "^5.6.3",
