--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/multer": "^1.4.12",
         "@types/node": "^22.9.0",
-        "@types/nodemailer": "^6.4.17",
         "@types/uuid": "^10.0.0",
         "axios": "^1.13.4",
         "bcryptjs": "^2.4.3",
@@ -43,12 +42,11 @@
         "express-rate-limit": "^7.4.1",
         "express-validator": "^7.2.0",
         "form-data": "^4.0.5",
-        "googleapis": "^171.4.0",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.10.1",
         "prisma": "^7.3.0",
+        "resend": "^6.9.2",
         "socket.io": "^4.8.1",
         "swagger-ui-express": "^5.0.1",
         "typescript": "^5.6.3",
